tests/cases/scc/error/0026-numargs.c.res
./tests/cases/scc/error/0026-numargs.c:19:5:	error:   could not convert type char * to type int.
exit code 1
